--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	"author": "Roshen Nair",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"connect-redis": "^6.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.2",
 		"morgan": "^1.10.0",
 		"redis": "^3.1.2"
