Rename server script from app.js to server.js

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "homina-server",
 	"version": "1.0.0",
 	"description": "Homina REST API & backend server",
-	"main": "app.js",
+	"main": "server.js",
 	"scripts": {
-		"dev": "nodemon app.js",
-		"start": "node app.js"
+		"dev": "nodemon server.js",
+		"start": "node server.js"
 	},
 	"author": "Roshen Nair",
 	"license": "ISC",
