--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"author": "Roshen Nair",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.0.1",
+		"bcryptjs": "^2.4.3",
 		"connect-redis": "^6.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
