--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
 		"express-session": "^1.17.2",
+		"googleapis": "^84.0.0",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.6.3",
 		"pg": "^8.7.1",
 		"redis": "^3.1.2"
 	},
@@ -29,6 +31,7 @@
 		"@types/express-session": "^1.17.4",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^16.4.13",
+		"@types/nodemailer": "^6.4.4",
 		"@types/pg": "^8.6.1",
 		"@types/redis": "^2.8.31",
 		"nodemon": "^2.0.7",
